Fix overflow handling in ios

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -28,6 +28,7 @@ body.dark-theme {
 .container {
   padding-top: 2rem;
   padding-bottom: 2rem;
+  overflow-x: hidden;
 }
 
 .math-display-wrap {
